--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ flake8==6.1.0
 mypy==1.8.0
 mypy-extensions==1.0.0
 pathspec==0.11.2
+pytest==8.0.0
 PyYAML==6.0.1
 requests==2.31.0
 types-PyYAML==6.0.12.12
